[project]
name = "ai-research-assistant"
version = "0.1.0"
description = "Deep research assistant using AI agents for web research and report generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=4.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "openai-agents>=0.9.0",
    "pydantic>=2.12.0",
    "pypdf>=4.0.0",
    "requests>=2.28.0",
    "numpy>=1.24.0",
    "sendgrid>=6.0.0",
]

[project.scripts]
ai-research-assistant = "deep_research:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["deep_research", "email_agent", "planner_agent", "research_manager", "search_agent", "writer_agent"]
